2005-09-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpactionview.c (gimp_action_view_new): skip
	actions if their name starts with '<' (menu actions created by
	plug-ins have names like "<Image>/Foo/Bar"). Scroll the
	pre-selected action to the center of the view, not to the top.

	* app/widgets/gimpcontrollereditor.c
	(gimp_controller_editor_edit_clicked): make the action editor
	transient to the controller editor. Show the edited event's name
	in the controller editor's header.

	* app/widgets/gimpcontrollerwheel.c: use gimp_get_mod_string()
	instead of hardcoding the modifiers in tons of translatable
	strings. Don't call gettext() in GimpController::get_blurb(),
	the strings are already translated.

	* app/widgets/gimpcontrollerkeyboard.c: removed call to gettext()
	here too.

2005-09-16  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_initialize):
	set the imagemap tool dialogs transient to the image window. See
	comments in bug #316521.

2005-09-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpwidgets-utils.[ch] (gimp_widget_set_accel_help):
	mis-named and mis-placed function that sets a widget's tooltip to
	the action's tooltip plus the action's keyboard shortcut.

	* app/widgets/gimptoolbox.c: at least the code is not here any
	more.

	* app/actions/tools-actions.c: use tool_info->help, not ->blurb
	as the action's tooltip so the above works.

2005-09-13  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimpcroptool.c
	* app/tools/gimprectangleoptions.c
	* app/tools/gimprectangletool.c
	* app/tools/gimpnewrectselecttool.c: changed the way we stay inside
	images boundaries so each tool decides whether it does or not.

2005-09-14  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox.c (gimp_toolbox_substitute_underscores):
	removed.

2005-09-14  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpwidgets-utils.c (gimp_get_mod_name_*): removed
	"<>" around modifiers.
